--- a/About.html
+++ b/About.html
@@ -126,20 +126,20 @@
 </head>
 <body>
    <div class="header">
-	<a href = "file:///C:/Users/NAGARAJAN/Desktop/AVV/Semester%202/23CSE113%20-%20User%20Interface%20Design/Project/Pets%20ParkOriginal.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
+	<a href = "Pets ParkOriginal.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
 	<div class = "search-container">
 		<input type = "text" class = "search-bar" placeholder = "Search by pet, breed, product...">
 		<img src = "search.png" alt = "Search" class="search-icon">
 	</div>
 
-	<a href = "file:///C:/Users/NAGARAJAN/Desktop/AVV/Semester%202/23CSE113%20-%20User%20Interface%20Design/Project/PPDCart.html"><img border="0" alt = "Cart" src = "cart.png" width ="100" height = "100"></a>
+	<a href = "Cart - Pets' Park"><img border="0" alt = "Cart" src = "cart.png" width ="100" height = "100"></a>
 
-	<a href = "file:///C:/Users/NAGARAJAN/Desktop/AVV/Semester%202/23CSE113%20-%20User%20Interface%20Design/Project/PPDLogin.html" class = "login-btn">Sign Up/Login</a>
+	<a href = "Login.html" class = "login-btn">Sign Up/Login</a>
 
    </div>
 
    <div class="menu">
-	<p><b><a href = "file:///C:/Users/NAGARAJAN/Desktop/AVV/Semester%202/23CSE113%20-%20User%20Interface%20Design/Project/Our%20Services.html" target="_blank" class="logo">Our Services</a></b></p>
+	<p><b><a href = "Our Services.html" target="_blank" class="logo">Our Services</a></b></p>
 
 	<div class="dropdown">
 		<p><b>Shop by Breed</b></p>
@@ -203,7 +203,7 @@
                 </div>
         </div>
     </div>
-    <a href="" class="login-btn">Book Appointment</a>
+    <a href="BookAppointment.html" class="login-btn">Book Appointment</a>
 </div>
 </div>
 
