--- a/About.html
+++ b/About.html
@@ -132,7 +132,7 @@
 		<img src = "search.png" alt = "Search" class="search-icon">
 	</div>
 
-	<a href = "Cart - Pets' Park"><img border="0" alt = "Cart" src = "cart.png" width ="100" height = "100"></a>
+	<a href = "Cart - Pets' Park.html"><img border="0" alt = "Cart" src = "cart.png" width ="100" height = "100"></a>
 
 	<a href = "Login.html" class = "login-btn">Sign Up/Login</a>
 
