--- a/Cat Accessories1.html
+++ b/Cat Accessories1.html
@@ -293,7 +293,7 @@
 
 
   <h3 class="logo">
-    <a href="Pets%20ParkOriginal.html">Home</a> /
+    <a href="Pets ParkOriginal.html">Home</a> /
     <a href="Cat Accessories.html">Cat Accessories</a> /
     <a href="Cat Accessories1.html">SmartCat Cat Litter 6.5L-5kg (Vanilla Flavour)</a>
   </h3>
