--- a/Cart - Pets' Park.html
+++ b/Cart - Pets' Park.html
@@ -368,7 +368,7 @@
 </head>
 <body>
    <div class="header">
-	<a href = "Pets ParkOriginal.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
+	<a href = "index.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
 	<div class = "search-container">
 		<input type = "text" class = "search-bar" placeholder = "Search by pet, breed, product...">
 		<img src = "search.png" alt = "Search" class="search-icon">
