--- a/Cat Collar3.html
+++ b/Cat Collar3.html
@@ -213,7 +213,7 @@
 <body>
 
   <div class="header">
-    <a href="Pets ParkOriginal.html">
+    <a href="index.html">
       <embed type="image/png" src="Logo.png" class="logo" width="150" height="150">
     </a>
     <div class="search-container">
@@ -293,7 +293,7 @@
 
 
   <h3 class="logo">
-    <a href="Pets ParkOriginal.html">Home</a> /
+    <a href="index.html">Home</a> /
     <a href="Cat Collars.html">Collars</a> /
     <a href="Cat Collar3.html">Smartypet Cat Harness 15mm</a>
   </h3>
