--- a/Dog Collar2.html
+++ b/Dog Collar2.html
@@ -213,7 +213,7 @@
 <body>
 
   <div class="header">
-    <a href="Pets ParkOriginal.html">
+    <a href="index.html">
       <embed type="image/png" src="Logo.png" class="logo" width="150" height="150">
     </a>
     <div class="search-container">
@@ -293,7 +293,7 @@
 
 
   <h3 class="logo">
-    <a href="Pets ParkOriginal.html">Home</a> /
+    <a href="index.html">Home</a> /
     <a href="Dog Collars.html">Dog Accessories</a> /
     <a href="Dog Collar2.html">Smartypet DC Assorted Dog Bandana for Dogs</a>
   </h3>
