--- a/Dog Food1.html
+++ b/Dog Food1.html
@@ -213,7 +213,7 @@
 <body>
 
   <div class="header">
-    <a href="Pets ParkOriginal.html">
+    <a href="index.html">
       <embed type="image/png" src="Logo.png" class="logo" width="150" height="150">
     </a>
     <div class="search-container">
@@ -293,7 +293,7 @@
 
 
   <h3 class="logo">
-    <a href="Pets ParkOriginal.html">Home</a> /
+    <a href="index.html">Home</a> /
     <a href="Dog Food.html">Dog Food</a> /
     <a href="Dog Food1.html">Pedigree Puppy Wet Dog Food<br>with Chicken Chunks in Gravy 130g(Pack of 5)</a>
   </h3>
