--- a/Login.html
+++ b/Login.html
@@ -155,7 +155,7 @@
                 alert(errorMessage);
             } else {
                 
-                window.location.href = "Pets ParkOriginal.html"; 
+                window.location.href = "index.html"; 
             }
         }
     </script>
