--- a/MPets3.html
+++ b/MPets3.html
@@ -213,7 +213,7 @@
 <body>
 
   <div class="header">
-    <a href="Pets ParkOriginal.html">
+    <a href=".html">
       <embed type="image/png" src="Logo.png" class="logo" width="150" height="150">
     </a>
     <div class="search-container">
@@ -293,7 +293,7 @@
 
 
   <h3 class="logo">
-    <a href="Pets ParkOriginal.html">Home</a> /
+    <a href=".html">Home</a> /
     <a href="MPets.html">MPets</a> /
     <a href="MPets3.html">M-Pets Volga Drinking Fountain For Pets 2200ml</a>
   </h3>
