--- a/SCO1.html
+++ b/SCO1.html
@@ -336,7 +336,7 @@
 </head>
 <body>
    <div class="header">
-	<a href = "Pets ParkOriginal.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
+	<a href = "index.html"><embed type = "image/png" src = "Logo.png" class = "logo" width = "150" height = "150"></a>
 	<div class = "search-container">
 		<input type = "text" class = "search-bar" placeholder = "Search by pet, breed, product...">
 		<img src = "search.png" alt = "Search" class="search-icon">
@@ -418,7 +418,7 @@
 </div>
 
 
-<h3 class="logo"><a href = "Pets ParkOriginal.html">Home</a>/<a href = "SCO.html">Skin Care - Ointment</a>/<a href = "SCO1.html">HatVet Itraraj Oral Suspension Solution 60ml</a></h3>
+<h3 class="logo"><a href = "index.html">Home</a>/<a href = "SCO.html">Skin Care - Ointment</a>/<a href = "SCO1.html">HatVet Itraraj Oral Suspension Solution 60ml</a></h3>
 
 <h1 class="h1">PRODUCT DETAILS</h1> 
 
